cmake_minimum_required(VERSION 3.13)

project(Course_Work)

set(CMAKE_CXX_STANDARD 17)

add_executable(Course_Work Source/main.cpp Source/Dinamic_Hafman/Dinamic_Hafman.cpp Source/Dinamic_Hafman/tree.cpp Source/Dinamic_Hafman/tree.h Source/Static_Hafman/Static_Hafman.cpp Source/Static_Hafman/Static_Hafman.h)
